Pushing - weel 2 objectives, 1. Add service layer with business logic 2. Implement validation using @Valid and custom annotations 3. Add global exception handling with @ControllerAdvice 4. Configure logging with SLF4J 5. Add API versioning (eg /api/v1/employees)